Fixed the stuckup errors and moving forward

--- a/RefreshMean/src/app/posts/post-list/post-list.component.scss
+++ b/RefreshMean/src/app/posts/post-list/post-list.component.scss
@@ -10,3 +10,16 @@
 mat-spinner{
   margin: auto;
 }
+.post-image
+{
+  width: 100%;
+}
+.post-image img
+{
+  width: 100%;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 12px;
+  box-shadow: 0px 10px 13px -7px #000000, 0px 4px 11px 1px rgba(0,0,0,0);
+box-shadow: 0px 10px 13px -7px #000000, 0px 4px 11px 1px rgba(0,0,0,0);
+}
